[Enhancement] Update testing framework to use Mockito and add Java 21 support (#70773)